nohup.out
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 80, in <module>
    sql_helper.close_ssh_tunnel()
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 24, in oag_to_sql_server
    sql_helper.mysql_connect()
  File "/home/bm12/publication-consolidator/crawl_OAG.py", line 100, in publication_crawler
    line = file_papers.readline()
OSError: [Errno 116] Stale file handle
Traceback (most recent call last):
  File "run_author.py", line 1, in <module>
    import intermediary_database
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 58
    file_papers = open(file, 'r')
              ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "run_publication.py", line 1, in <module>
    import intermediary_database
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 58
    file_papers = open(file, 'r')
              ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "run_publication.py", line 1, in <module>
    import intermediary_database
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 58
    file_papers = open(file, 'r')
              ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "run_author.py", line 1, in <module>
    import intermediary_database
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 58
    file_papers = open(file, 'r')
              ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "run_publication.py", line 3, in <module>
    intermediary_database.publication_crawler("data/mag_papers_0.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 71, in publication_crawler
    pub_json = json.loads(line)
  File "/usr/lib/python3.6/json/__init__.py", line 354, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.6/json/decoder.py", line 339, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.6/json/decoder.py", line 357, in raw_decode
    raise JSONDecodeError("Expecting value", s, err.value) from None
json.decoder.JSONDecodeError: Expecting value: line 1 column 267 (char 266)
Traceback (most recent call last):
  File "run_author.py", line 3, in <module>
    intermediary_database.author_crawler("data/mag_authors_0.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 196, in author_crawler
    sql_helper.connection.cursor().execute(sql, val)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/connection.py", line 809, in cursor
    raise errors.OperationalError("MySQL Connection not available.")
mysql.connector.errors.OperationalError: MySQL Connection not available.
Traceback (most recent call last):
  File "run_publication.py", line 3, in <module>
    intermediary_database.publication_crawler("data/mag_papers_0.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 116, in publication_crawler
    sql_helper.connection.cursor().execute(sql, val)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/cursor.py", line 551, in execute
    self._handle_result(self._connection.cmd_query(stmt))
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/connection.py", line 490, in cmd_query
    result = self._handle_result(self._send_cmd(ServerCmd.QUERY, query))
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/connection.py", line 267, in _send_cmd
    return self._socket.recv()
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/network.py", line 241, in recv_plain
    chunk = self.sock.recv(4 - packet_len)
KeyboardInterrupt
Traceback (most recent call last):
  File "run_publication.py", line 3, in <module>
    intermediary_database.publication_crawler("data/mag_papers_0.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 116, in publication_crawler
    sql_helper.connection.cursor().execute(sql, val)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/cursor.py", line 540, in execute
    stmt = RE_PY_PARAM.sub(psub, stmt)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/cursor.py", line 75, in __call__
    return bytes(self.params[index])
KeyboardInterrupt
Traceback (most recent call last):
  File "run_author.py", line 3, in <module>
    intermediary_database.author_crawler("data/mag_authors_0.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 196, in author_crawler
    sql_helper.connection.cursor().execute(sql, val)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/cursor.py", line 551, in execute
    self._handle_result(self._connection.cmd_query(stmt))
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/connection.py", line 490, in cmd_query
    result = self._handle_result(self._send_cmd(ServerCmd.QUERY, query))
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/connection.py", line 385, in _handle_result
    return self._handle_ok(packet)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/connection.py", line 327, in _handle_ok
    ok_pkt = self._protocol.parse_ok(packet)
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/protocol.py", line 214, in parse_ok
    (packet, ok_packet['affected_rows']) = utils.read_lc_int(packet[5:])
  File "/home/bm12/.local/lib/python3.6/site-packages/mysql/connector/utils.py", line 309, in read_lc_int
    return (buf[1:], int(lcbyte))
KeyboardInterrupt
Traceback (most recent call last):
  File "run_publication.py", line 3, in <module>
    intermediary_database.publication_crawler("data/mag_papers_0.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 71, in publication_crawler
    
  File "/usr/lib/python3.6/json/__init__.py", line 354, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.6/json/decoder.py", line 339, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.6/json/decoder.py", line 357, in raw_decode
    raise JSONDecodeError("Expecting value", s, err.value) from None
json.decoder.JSONDecodeError: Expecting value: line 1 column 267 (char 266)
Traceback (most recent call last):
  File "run_author.py", line 4, in <module>
    intermediary_database.author_crawler("data/mag_authors_1.txt")
  File "/home/bm12/publication-consolidator/intermediary_database.py", line 153, in author_crawler
    temp_dict["id"] = ""
  File "/usr/lib/python3.6/json/__init__.py", line 354, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.6/json/decoder.py", line 339, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.6/json/decoder.py", line 355, in raw_decode
    obj, end = self.scan_once(s, idx)
json.decoder.JSONDecodeError: Expecting property name enclosed in double quotes: line 1 column 1059 (char 1058)
